add fhir/filepath